--- a/src/about-us.html
+++ b/src/about-us.html
@@ -168,14 +168,62 @@
         <div class="lower-FV__img lower-FV__img--about"><h1>About us</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">私たちについて</div>
+        </div>
       </div>
-      <section class="gallery">
-        <div class="gallery__section-titles section-titles">
-          <p class="section-titles__english">Gallery</p>
-          <h2 class="section-titles__japanese">フォト</h2>
+      <section class="about-us">
+        <div class="about-us__inner inner">
+          <div class="about-us__img-wrapper">
+            <div class="about-us__img-left">
+              <img src="./assets/images/common/about-us-left.png" alt="沖縄の赤茶色の瓦屋根にシーサーが乗っていてこちらを見ている" />
+            </div>
+            <div class="about-us__img-right">
+              <img src="./assets/images/common/about-us-right.png" alt="海の中で黄色い熱帯魚が２匹向かい合っている" />
+            </div>
+          </div>
+          <div class="about-us__texts">
+            <p class="about-us__main-text">Dive into<br />the Ocean</p>
+            <div class="about-us__text">
+              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              <div class="about-us__btn-wrapper">
+                <a href="./about-us.html" class="btn"
+                  >View more
+                  <span></span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gallery gallery-wrapper">
+        <div class="gallery__inner inner">
+          <div class="gallery__section-titles section-titles">
+            <p class="section-titles__english">Gallery</p>
+            <h2 class="section-titles__japanese">フォト</h2>
+            <div class="gallery__photo-wrapper">
+              <table class="gallery__photos">
+                <tr>
+                  <td rowspan="2" class="gallery__large-photo"><img src="./assets/images/common/gallery1.png" alt="" /></td>
+                  <td class="gallery__small-photo"><img src="./assets/images/common/gallery2.png" alt="" /></td>
+                </tr>
+                <tr>
+                  <td class="gallery__small-photo"><img src="./assets/images/common/gallery3.png" alt="" /></td>
+                </tr>
+              </table>
+              <table class="gallery__photos">
+                <tr>
+                  <td class="gallery__small-photo"><img src="./assets/images/common/gallery4.png" alt="" /></td>
+                  <td rowspan="2" class="gallery__small-photo"><img src="./assets/images/common/gallery6.png" alt="" /></td>
+                </tr>
+                <tr>
+                  <td class="gallery__large-photo"><img src="./assets/images/common/gallery5.png" alt="" /></td>
+                </tr>
+              </table>
+            </div>
+          </div>
         </div>
       </section>
       <!--contact-->
