--- a/src/blog-article.html
+++ b/src/blog-article.html
@@ -179,6 +179,10 @@
         <div class="bread__arrow">></div>
         <div class="bread__detail">利用規約</div>
       </div>
+      <div class="blog__container">
+        <article class="blog__articles"></article>
+        <aside class="blog__side"></aside>
+      </div>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
