--- a/src/blog.html
+++ b/src/blog.html
@@ -178,7 +178,7 @@
         <div class="bread__inner inner">
           <a href="index.html" class="bread__top">TOP</a>
           <div class="bread__arrow">></div>
-          <div class="bread__detail">利用規約</div>
+          <div class="bread__detail">ブログ</div>
         </div>
       </div>
       <div class="blog-layout">
@@ -293,7 +293,14 @@
             </div>
           </div>
         </article>
-        <aside></aside>
+        <aside class="sidebar">
+          <section class="sidebar__popular sidebar__popular-wrapper">
+            <h4 class="sidebar__title"></h4>
+          </section>
+          <section class="sidebar__reviews sidebar__reviews-wrapper"></section>
+          <section class="sidebar__campaign sidebar__campaign-wrapper"></section>
+          <section class="sidebar__archive sidebar__achive-wrapper"></section>
+        </aside>
       </div>
       <!--contact-->
       <section class="contact contact-wrapper">
