--- a/src/campaign.html
+++ b/src/campaign.html
@@ -74,7 +74,7 @@
               <li class="header__item">
                 <a href="./blog.html">
                   <div class="header__titles">
-                    <p class="header__titles-english">Blog</p>
+                    <p class="header__titles-english">blog</p>
                     <p class="header__titles-japanese">ブログ</p>
                   </div>
                 </a>
@@ -175,10 +175,111 @@
         <div class="lower-FV__img lower-FV__img--campaign"><h1>Campaign</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">サイトマップ</div>
+        </div>
       </div>
+      <section class="campaign">
+        <div class="campaign__inner inner">
+          <div class="campaign__tabs-wrapper">
+            <div class="campaign__tabs tabs"><input type="radio" checked id="1" name="voice" /><label for="1">ALL</label> <input type="radio" id="2" name="voice" /><label for="2">ライセンス講習</label> <input type="radio" id="3" name="voice" /><label for="3">ファンダイビング</label> <input type="radio" id="4" name="voice" /><label for="4">体験ダイビング</label></div>
+          </div>
+          <div class="campaign__cards">
+            <a href="#" class="campaign__cards__item campaign-card">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
+              </figure>
+              <div class="campaign-card__body">
+                <div class="campaign-card__category">ライセンス講習</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title">ライセンス取得</h3>
+                </div>
+              </div>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥56,000</p>
+                  <p class="campaign-card__after-price">¥46,000</p>
+                </div>
+                <p class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+              </div>
+            </a>
+            <a href="#" class="campaign-card">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
+              </figure>
+              <div class="campaign-card__body">
+                <div class="campaign-card__category">体験ダイビング</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title">貸切体験ダイビング</h3>
+                </div>
+              </div>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥24,000</p>
+                  <p class="campaign-card__after-price">¥18,000</p>
+                </div>
+                <p class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+              </div>
+            </a>
+            <a href="#" class="campaign-card">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
+              </figure>
+              <div class="campaign-card__body">
+                <div class="campaign-card__category">体験ダイビング</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title">ナイトダイビング</h3>
+                </div>
+              </div>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥10,000</p>
+                  <p class="campaign-card__after-price">¥8,000</p>
+                </div>
+                <p class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+              </div>
+            </a>
+            <a href="#" class="campaign-card">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
+              </figure>
+              <div class="campaign-card__body">
+                <div class="campaign-card__category">ファンダイビング</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title">貸切ファンダイビング</h3>
+                </div>
+              </div>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥20,000</p>
+                  <p class="campaign-card__after-price">¥16,000</p>
+                </div>
+                <div class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="campaign__pager-wrapper pager-wrapper">
+          <div class="campaign__pager pager">
+            <a href="#" class="pager__before"><img src="./assets/images/common/pager-before.png" alt="前のページへ" /></a>
+            <div class="pager__number-wrapper">
+              <a href="#" class="pager__number">1</a>
+              <a href="#" class="pager__number">2</a>
+              <a href="#" class="pager__number">3</a>
+              <a href="#" class="pager__number">4</a>
+              <a href="#" class="pager__number">5</a>
+              <a href="#" class="pager__number">6</a>
+            </div>
+            <a href="#" class="pager__after"><img src="./assets/images/common/pager-after.png" alt="次のページへ" /></a>
+          </div>
+        </div>
+      </section>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
@@ -256,7 +357,7 @@
                     <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                   </ul>
                 </div>
-                <div class="site-map__main-title"><a href="./blog.html">ブログ</a></div>
+                <div class="site-map__main-title"><a href="./campaign.html">ブログ</a></div>
               </div>
             </div>
             <div class="site-map__sp-layout">
