--- a/src/contact-FAQ.html
+++ b/src/contact-FAQ.html
@@ -174,15 +174,59 @@
       <section class="lower-FV">
         <div class="lower-FV__img lower-FV__img--FAQ"><h1>FAQ</h1></div>
       </section>
-      <div class="contact__bread bread">
-        <div class="bread__top">TOP</div>
+      <div class="bread__inner inner">
+        <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__detail">料金一覧</div>
       </div>
-      <div class="blog__container">
-        <article class="blog__articles"></article>
-        <aside class="blog__side"></aside>
-      </div>
+      <section class="contact-FAQ">
+        <div class="contact-FAQ__inner inner">
+          <div class="contact-FAQ__wrapper">
+            <div class="contact-FAQ__FAQ">
+              <h2 class="contact-FAQ__question" id="js-accordion-question">ここに質問が入ります。</h2>
+              <div class="contact-FAQ__answer">
+                <p>ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="contact-FAQ__FAQ">
+              <h2 class="contact-FAQ__question" id="js-accordion-question">ここに質問が入ります。</h2>
+              <div class="contact-FAQ__answer">
+                <p>ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="contact-FAQ__FAQ">
+              <h2 class="contact-FAQ__question" id="js-accordion-question">ここに質問が入ります。</h2>
+              <div class="contact-FAQ__answer">
+                <p>ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="contact-FAQ__FAQ">
+              <h2 class="contact-FAQ__question" id="js-accordion-question">ここに質問が入ります。</h2>
+              <div class="contact-FAQ__answer">
+                <p>ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="contact-FAQ__FAQ">
+              <h2 class="contact-FAQ__question" id="js-accordion-question">ここに質問が入ります。</h2>
+              <div class="contact-FAQ__answer">
+                <p>ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="contact-FAQ__FAQ">
+              <h2 class="contact-FAQ__question" id="js-accordion-question">ここに質問が入ります。</h2>
+              <div class="contact-FAQ__answer">
+                <p>ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+            <div class="contact-FAQ__FAQ">
+              <h2 class="contact-FAQ__question" id="js-accordion-question">ここに質問が入ります。</h2>
+              <div class="contact-FAQ__answer">
+                <p>ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
