--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -175,10 +175,51 @@
         <div class="lower-FV__img lower-FV__img--contact"><h1>Contact</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">サイトマップ</div>
+        </div>
       </div>
+      <section class="contact-form contact-form-wrapper">
+        <div class="contact-form__inner inner">
+          <form action="confirm.php" method="post" name="form" onsubmit="return validate()" class="contact-form__form">
+            <div class="contact-form__item">
+              <label class="contact-form__label">お名前<span>必須</span></label>
+              <input type="text" name="name" value="" class="contact-form__textarea" />
+            </div>
+            <div class="contact-form__item">
+              <label class="contact-form__label">メールアドレス<span>必須</span></label>
+              <input type="text" name="email" value="" class="contact-form__textarea" />
+            </div>
+            <div class="contact-form__item">
+              <label class="contact-form__label">電話番号<span>必須</span></label>
+              <input type="text" name="tel" value="" class="contact-form__textarea" />
+            </div>
+            <div class="contact-form__item">
+              <label class="contact-form__label">お問い合わせ項目<span>必須</span></label>
+              <div class="contact-form__checkbox">
+              <input type="checkbox" />ダイビング講習について</input>
+              <input type="checkbox" />ファンデイビングについて</input>
+              <input type="checkbox" />体験ダイビングについて</input>
+            </div>
+            </div>
+            <div class="contact-form__item">
+              <label class="contact-form__label">キャンペーン</label>
+              <select name="contact-form__content">
+                <option value="キャンペーン内容を選択">キャンペーン内容を選択</option>
+                <option value="キャンペーン内容を選択">キャンペーン内容を選択</option>
+                <option value="キャンペーン内容を選択">キャンペーン内容を選択</option>
+              </select>
+            </div>
+            <div class="contact-form__item">
+              <label class="contact-form__label">お問い合わせ内容<span>必須</span></label>
+              <textarea name="content" rows="5" class="contact-form__textarea"></textarea>
+            </div>
+            <button type="submit">確認画面へ</button>
+          </form>
+        </div>
+      </section>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
