--- a/src/information.html
+++ b/src/information.html
@@ -82,7 +82,7 @@
               <li class="header__item">
                 <a href="./voice.html">
                   <div class="header__titles">
-                    <p class="header__titles-english">Voice</p>
+                    <p class="header__titles-english">voice</p>
                     <p class="header__titles-japanese">お客様の声</p>
                   </div>
                 </a>
@@ -146,7 +146,7 @@
               </div>
               <div class="site-map__sp-layout">
                 <div class="site-map__main">
-                  <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
+                  <div class="site-map__main-title site-map__main-title--layout"><a href="./info.html">お客様の声</a></div>
                   <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
                   <div class="site-map__sub">
                     <ul class="site-map__sub-titles">
@@ -175,10 +175,53 @@
         <div class="lower-FV__img lower-FV__img--info"><h1>Information</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">サイトマップ</div>
+        </div>
       </div>
+      <section class="info info-wrapper">
+        <div class="info__inner inner">
+          <div class="info__tabs-wrapper">
+            <div class="info__tabs">
+              <input type="radio" id="2" name="info" /><label for="2" class="info__label"
+                ><div class="imfo__tab-icon"><img src="./assets/images/common/info-lisence-icon.svg" alt="" /></div>
+                ライセンス講習</label
+              >
+              <input type="radio" id="3" name="info" /><label for="3" class="info__label"
+                ><div class="imfo__tab-icon"><img src="./assets/images/common/info-fun-icon.svg" alt="" /></div>
+                ファンダイビング</label
+              >
+              <input type="radio" id="4" name="info" /><label for="4" class="info__label"
+                ><div class="imfo__tab-icon"><img src="./assets/images/common/info-trial-icon.svg" alt="" /></div>
+                体験ダイビング</label
+              >
+            </div>
+          </div>
+          <div class="info__content">
+            <div class="info__texts">
+              <div class="info__title">ライセンス講習</div>
+              <p class="info__text">泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
+            </div>
+            <div class="info__img"><img src="./assets/images/common/info1.jpg" alt="" /></div>
+          </div>
+          <div class="info__content">
+            <div class="info__texts">
+              <div class="info__title">ファンダイビング</div>
+              <p class="info__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
+            </div>
+            <div class="info__img"><img src="./assets/images/common/info2.png" alt="" /></div>
+          </div>
+          <div class="info__content">
+            <div class="info__texts">
+              <div class="info__title">体験ダイビング</div>
+              <p class="info__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
+            </div>
+            <div class="info__img"><img src="./assets/images/common/info3.jpg" alt="" /></div>
+          </div>
+        </div>
+      </section>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
@@ -261,7 +304,7 @@
             </div>
             <div class="site-map__sp-layout">
               <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
+                <div class="site-map__main-title site-map__main-title--layout"><a href="./info.html">お客様の声</a></div>
                 <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
                 <div class="site-map__sub">
                   <ul class="site-map__sub-titles">
