--- a/src/voice.html
+++ b/src/voice.html
@@ -175,13 +175,23 @@
         <div class="lower-FV__img lower-FV__img--voice"><h1>Voice</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">サイトマップ</div>
+        </div>
       </div>
       <section class="voice">
         <div class="voice__inner inner">
-          <div class="voice-cards">
+          <div class="voice__tabs-wrapper">
+            <div class="voice__tabs tabs">
+              <input type="radio" checked id="1" name="voice" /><label for="1">ALL</label>
+              <input type="radio" id="2" name="voice" /><label for="2">ライセンス講習</label>
+              <input type="radio" id="3" name="voice" /><label for="3">ファンダイビング</label
+              ><input type="radio" id="4" name="voice" /><label for="4">体験ダイビング</label>
+            </div>
+          </div>
+          <div class="voice__cards voice-cards">
             <a href="#" class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
