--- a/src/blog.html
+++ b/src/blog.html
@@ -334,7 +334,7 @@
           </div>
         </article>
         <aside class="sidebar sidebar-wrapper">
-          <div class="sidebar__inner inner">
+          <div class="sidebar__inner">
             <section class="sidebar__popular sidebar__popular-wrapper">
               <h4 class="sidebar__title">人気記事</h4>
               <div class="sidebar__popular-cards">
@@ -376,32 +376,32 @@
               <h4 class="sidebar__title">キャンペーン</h4>
               <div class="sidebar__campaign-cards">
                 <a href="#" class="campaign__cards__item campaign-card">
-                  <figure class="campaign-card__img">
+                  <figure class="campaign-card__img campaign-card__img--side">
                     <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
                   </figure>
-                  <div class="campaign-card__body">
+                  <div class="campaign-card__body campaign-card__body--side">
                     <div class="campaign-card__title-wrapper">
                       <h3 class="campaign-card__title campaign-card__title--side">ライセンス取得</h3>
                     </div>
                   </div>
                   <div class="campaign-card__contents">
-                    <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                    <p class="campaign-card__text campaign-card__text--side">全部コミコミ(お一人様)</p>
                     <div class="campaign-card__price-wrapper">
                       <p class="campaign-card__pre-price">¥56,000</p>
                       <p class="campaign-card__after-price">¥46,000</p>
                     </div>
                   </div>
                 </a><a href="#" class="campaign-card">
-                  <figure class="campaign-card__img">
+                  <figure class="campaign-card__img campaign-card__img--side">
                     <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
                   </figure>
-                  <div class="campaign-card__body">
+                  <div class="campaign-card__body campaign-card__body--side">
                     <div class="campaign-card__title-wrapper">
                       <h3 class="campaign-card__title campaign-card__title--side">貸切体験ダイビング</h3>
                     </div>
                   </div>
                   <div class="campaign-card__contents">
-                    <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                    <p class="campaign-card__text campaign-card__text--side">全部コミコミ(お一人様)</p>
                     <div class="campaign-card__price-wrapper">
                       <p class="campaign-card__pre-price">¥24,000</p>
                       <p class="campaign-card__after-price">¥18,000</p>
@@ -428,8 +428,10 @@
               </div>
             </section>
           </div>
-        </aside>
       </div>
+    </div>
+    </aside>
+    </div>
     </div>
     <!--contact-->
     <section class="contact contact-wrapper">
