--- a/src/campaign.html
+++ b/src/campaign.html
@@ -184,103 +184,131 @@
     <div class="bread">
       <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">サイトマップ</div>
+        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+        <div class="bread__detail">キャンペーン</div>
       </div>
     </div>
     <section class="campaign">
-      <div class="campaign__inner inner">
-        <div class="campaign__tabs-wrapper">
-          <div class="campaign__tabs tabs">
-            <button class="tabs__item tab" tab="campaign-all">ALL</button>
-            <button class="tabs__item tab" tab="campaign-license">ライセンス講習</button>
-            <button class="tabs__item tab" tab="campaign-fun">ファンダイビング</button>
-            <button class="tabs__item tab" tab="campaign-trial">体験ダイビング</button>
-          </div>
+      <div class="campaign__tabs-wrapper inner">
+        <div class="campaign__tabs tabs">
+          <input type="radio" checked id="1" name="voice" /><label for="1">ALL</label>
+          <input type="radio" id="2" name="voice" /><label for="2">ライセンス講習</label>
+          <input type="radio" id="3" name="voice" /><label for="3">ファンダイビング</label>
+          <input type="radio" id="4" name="voice" /><label for="4">体験ダイビング</label>
         </div>
+      </div>
+      <div class="campaign__inner inner">
         <div class="campaign__cards">
-          <a href="#" class="campaign__cards__item campaign-card">
+          <a href="" class="campaign__cards-item campaign-card" data-category="info-license">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
             </figure>
-            <div class="campaign-card__body">
-              <div class="campaign-card__category" category="campaign-license">ライセンス講習</div>
+            <div class="campaign-card__body  campaign-card__body--lower">
+              <div class="campaign-card__category">ライセンス講習</div>
               <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title">ライセンス取得</h3>
+                <h3 class="campaign-card__title campaign-card__title--lower">ライセンス取得</h3>
               </div>
             </div>
             <div class="campaign-card__contents">
-              <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
               <div class="campaign-card__price-wrapper">
                 <p class="campaign-card__pre-price">¥56,000</p>
                 <p class="campaign-card__after-price">¥46,000</p>
               </div>
-              <p class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
               </p>
+              <p class="campaign-card__date">2023/6/1-9/30</p>
+              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+              <object class="campaign-card__btn-wrapper">
+                <a href="./contact-form.html" class="btn">Contact us
+                  <span></span>
+                </a>
+              </object>
             </div>
           </a>
-          <a href="#" class="campaign-card">
+          <a href="" class="campaign-card" data-category="info-trial">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
             </figure>
-            <div class="campaign-card__body">
-              <div class="campaign-card__category" category="campaign-trial">体験ダイビング</div>
+            <div class="campaign-card__body  campaign-card__body--lower">
+              <div class="campaign-card__category">体験ダイビング</div>
               <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title">貸切体験ダイビング</h3>
+                <h3 class="campaign-card__title  campaign-card__title--lower">貸切体験ダイビング</h3>
               </div>
             </div>
             <div class="campaign-card__contents">
-              <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
               <div class="campaign-card__price-wrapper">
                 <p class="campaign-card__pre-price">¥24,000</p>
                 <p class="campaign-card__after-price">¥18,000</p>
               </div>
-              <p class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
               </p>
+              <p class="campaign-card__date">2023/6/1-9/30</p>
+              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+              <object class="campaign-card__btn-wrapper">
+                <a href="./contact-form.html" class="btn">Contact us
+                  <span></span>
+                </a>
+              </object>
             </div>
           </a>
-          <a href="#" class="campaign-card">
+          <a href="" class="campaign-card" data-category="info-trial">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
             </figure>
-            <div class="campaign-card__body">
-              <div class="campaign-card__category" category="campaign-trial">体験ダイビング</div>
+            <div class="campaign-card__body campaign-card__body--lower">
+              <div class="campaign-card__category">体験ダイビング</div>
               <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title">ナイトダイビング</h3>
+                <h3 class="campaign-card__title campaign-card__title--lower">ナイトダイビング</h3>
               </div>
             </div>
             <div class="campaign-card__contents">
-              <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
               <div class="campaign-card__price-wrapper">
                 <p class="campaign-card__pre-price">¥10,000</p>
                 <p class="campaign-card__after-price">¥8,000</p>
               </div>
-              <p class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
               </p>
+              <p class="campaign-card__date">2023/6/1-9/30</p>
+              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+              <object class="campaign-card__btn-wrapper">
+                <a href="./contact-form.html" class="btn">Contact us
+                  <span></span>
+                </a>
+              </object>
             </div>
           </a>
-          <a href="#" class="campaign-card">
+          <a class="campaign-card" data-category="info-fun">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
             </figure>
-            <div class="campaign-card__body">
+            <div class="campaign-card__body  campaign-card__body--lower">
               <div class="campaign-card__category" category="campaign-fun">ファンダイビング</div>
               <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title">貸切ファンダイビング</h3>
+                <h3 class="campaign-card__title campaign-card__title--lower">貸切ファンダイビング</h3>
               </div>
             </div>
             <div class="campaign-card__contents">
-              <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
               <div class="campaign-card__price-wrapper">
                 <p class="campaign-card__pre-price">¥20,000</p>
                 <p class="campaign-card__after-price">¥16,000</p>
               </div>
-              <div class="campaign__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-              </div>
+              </p>
+              <p class="campaign-card__date">2023/6/1-9/30</p>
+              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+              <object class="campaign-card__btn-wrapper">
+                <a href="./contact-form.html" class="btn">Contact us
+                  <span></span>
+                </a>
+              </object>
             </div>
           </a>
         </div>
@@ -301,7 +329,7 @@
       </div>
     </section>
     <!--contact-->
-    <section class="contact contact-wrapper">
+    <section class="contact contact-wrapper  contact-wrapper--campaign">
       <div class="contact__inner inner">
         <div class="contact__content-inner">
           <div class="contact__address-wrapper">
