--- a/src/contact-form-success.html
+++ b/src/contact-form-success.html
@@ -7,7 +7,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="robots" content="noindex" />
   <!-- meta情報 -->
-  <title>ダイビング情報|CodeUps</title>
+  <title>お問い合わせ|CodeUps</title>
   <meta name="description" content="沖縄県那覇市にあるダイビングショップ。ダイビングライセンスも取得できます。" />
   <meta name="keywords" content="CodeUps" />
   <!-- ogp -->
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
   <script src="./assets/js/script.js" defer></script>
 </head>
 
@@ -172,74 +173,31 @@
   </header>
   <main>
     <section class="lower-FV">
-      <div class="lower-FV__img lower-FV__img--fish">
-        <h1>Site MAP</h1>
+      <div class="lower-FV__img lower-FV__img--contact">
+        <h1>Contact</h1>
       </div>
     </section>
     <div class="bread">
       <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+        <div class="bread__arrow">></div>
         <div class="bread__detail">サイトマップ</div>
       </div>
     </div>
-    <section class="site-map-wrapper ">
-      <div class="site-map_inner inner">
-        <nav class="site-map site-map--lower">
-          <div class="site-map__sp-layout site-map__sp-layout--lower">
-            <div class="site-map__content">
-              <div class="site-map__main-title site-map__main-title--layout site-map__main-title--black"><a
-                  href="./campaign.html">キャンペーン</a></div>
-              <div class="site-map__sub-group">
-                <ul class="site-map__sub-titles">
-                  <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
-                  <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
-                </ul>
-              </div>
-              <div class="site-map__main-title site-map__main-title--black"><a href="./about-us.html">私たちについて</a></div>
-            </div>
-            <div class="site-map__main">
-              <div class="site-map__main-title site-map__main-title--black"><a href="./information.html">ダイビング情報</a>
-              </div>
-              <div class="site-map__sub-group">
-                <ul class="site-map__sub-titles">
-                  <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
-                  <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
-                </ul>
-              </div>
-              <div class="site-map__main-title site-map__main-title--black"><a href="./blog.html">ブログ</a></div>
-            </div>
+    <section class="contact-form contact-form-wrapper">
+      <div class="contact-form__inner inner">
+        <div class="contact-form__success-wrapper">
+          <h2 class="contact-form__success-title">お問い合わせ内容を送信完了しました。</h2>
+          <div class="contact-form__success">
+            <p>このたびは、お問い合わせ頂き<wbr />誠にありがとうございます。</p>
+            <p>お送り頂きました内容を確認の上、<wbr />3営業日以内に折り返しご連絡させて頂きます。</p>
+            <p>また、ご記入頂いたメールアドレスへ、<wbr />自動返信の確認メールをお送りしております。</p>
           </div>
-          <div class="site-map__sp-layout site-map__sp-layout--lower">
-            <div class="site-map__main">
-              <div class="site-map__main-title site-map__main-title--layout site-map__main-title--black"><a
-                  href="./voice.html">お客様の声</a></div>
-              <div class="site-map__main-title site-map__main-title--black"><a href="./price.html">料金一覧</a></div>
-              <div class="site-map__sub">
-                <ul class="site-map__sub-titles">
-                  <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
-                  <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                </ul>
-              </div>
-            </div>
-            <ul class="site-map__main">
-              <li class="site-map__main-title site-map__main-title--black"><a href="./contact-FAQ.html">よくある質問</a></li>
-              <li class="site-map__main-title site-map__main-title--black">
-                <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
-              </li>
-              <li class="site-map__main-title site-map__main-title--black"><a href="./terms-of-service.html">利用規約</a>
-              </li>
-              <li class="site-map__main-title site-map__main-title--black"><a href="./contact-form.html">お問い合わせ</a></li>
-            </ul>
-          </div>
-        </nav>
+        </div>
       </div>
     </section>
     <!--contact-->
-    <section class="contact contact-wrapper contact-wrapper--site-map">
+    <section class="contact contact-wrapper">
       <div class="contact__inner inner">
         <div class="contact__content-inner">
           <div class="contact__address-wrapper">
