--- a/src/about-us.html
+++ b/src/about-us.html
@@ -182,7 +182,7 @@
     <div class="bread">
       <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow">></div>
+        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">私たちについて</div>
       </div>
     </div>
@@ -201,11 +201,6 @@
           <div class="about-us__text">
             ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。
             ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-            <div class="about-us__btn-wrapper">
-              <a href="./about-us.html" class="btn">View more
-                <span></span>
-              </a>
-            </div>
           </div>
         </div>
       </div>
@@ -217,25 +212,75 @@
           <h2 class="section-titles__japanese">フォト</h2>
           <div class="gallery__photo-wrapper">
             <div class="gallery__photo">
-              <div class="gallery__photo-large"><img src="./assets/images/common/gallery1.png" alt=""></div>
+              <div class="gallery__photo-large" id="modal01"><img src="./assets/images/common/gallery1.png" alt="">
+              </div>
               <div class="gallery__photo-smalls">
-                <div class="gallery__photo-small"><img src="./assets/images/common/gallery2.png" alt=""></div>
-                <div class="gallery__photo-small"><img src="./assets/images/common/gallery3.png" alt=""></div>
+                <div class="gallery__photo-small" id="modal02"><img src="./assets/images/common/gallery2.png" alt="">
+                </div>
+                <div class="gallery__photo-small" id="modal03"><img src="./assets/images/common/gallery3.png" alt="">
+                </div>
               </div>
             </div>
             <div class="gallery__photo">
               <div class="gallery__photo-smalls">
-                <div class="gallery__photo-small"><img src="./assets/images/common/gallery4.png" alt=""></div>
-                <div class="gallery__photo-small"><img src="./assets/images/common/gallery5.png" alt=""></div>
+                <div class="gallery__photo-small" id="modal04"><img src="./assets/images/common/gallery4.png" alt="">
+                </div>
+                <div class="gallery__photo-small" id="modal05"><img src="./assets/images/common/gallery5.png" alt="">
+                </div>
               </div>
-              <div class="gallery__photo-large"><img src="./assets/images/common/gallery6.png" alt=""></div>
+              <div class="gallery__photo-large" id="modal06"><img src="./assets/images/common/gallery6.png" alt="">
+              </div>
+            </div>
+            <!--モーダル本体上３つ-->
+            <div class="gallery__modal modal active" id="cont-modal01" style="display: none;">
+              <div class="modal__body">
+                <div class="modal__content modal__content--large">
+                  <img src="./assets/images/common/gallery1.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__modal modal active" id="cont-modal02" style="display: none;">
+            <div class="modal__body">
+              <div class="modal__content">
+                <img src="./assets/images/common/gallery2.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="gallery__modal modal active" id="cont-modal03" style="display: none;">
+            <div class="modal__body">
+              <div class="modal__content">
+                <img src="./assets/images/common/gallery3.png" alt="">
+              </div>
+            </div>
+          </div>
+          <!--モーダル本体下３つ-->
+          <div class="gallery__modal modal active" id="cont-modal04" style="display: none;">
+            <div class="modal__body">
+              <div class="modal__content">
+                <img src="./assets/images/common/gallery4.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="gallery__modal modal active" id="cont-modal05" style="display: none;">
+            <div class="modal__body">
+              <div class="modal__content">
+                <img src="./assets/images/common/gallery5.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="gallery__modal modal active" id="cont-modal06" style="display: none;">
+            <div class="modal__body">
+              <div class="modal__content modal__content--large">
+                <img src="./assets/images/common/gallery6.png" alt="">
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!--contact-->
-    <section class="contact contact-wrapper">
+    <section class="contact contact-wrapper  contact-wrapper--about">
       <div class="contact__inner inner">
         <div class="contact__content-inner">
           <div class="contact__address-wrapper">
