--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -184,25 +184,28 @@
     <div class="bread">
       <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">サイトマップ</div>
+        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+        <div class="bread__detail">お問い合わせ</div>
       </div>
     </div>
     <section class="contact-form contact-form-wrapper">
       <div class="contact-form__inner inner">
-        <p class="contact-form__error">※必須項目が入力されていません。<wbr />入力してください。</p>
+        <div class="contact-form__error">
+          <p class="contact-form__error-text">※必須項目が入力されていません。</p>
+          <p class="contact-form__error-text">入力してください。</p>
+        </div>
         <form action="confirm.php" method="post" name="form" onsubmit="return validate()" class="contact-form__form">
           <div class="contact-form__item">
             <label class="contact-form__label">お名前<span>必須</span></label>
-            <input type="text" name="name" value="" class="contact-form__text" />
+            <input type="text" name="name" value="" class="contact-form__text" placeholder="沖縄　太郎" />
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">メールアドレス<span>必須</span></label>
-            <input type="text" name="email" value="" class="contact-form__text" />
+            <input type="text" name="email" value="" class="contact-form__text" placeholder="aaa000@ggmail.com" />
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">電話番号<span>必須</span></label>
-            <input type="text" name="tel" value="" class="contact-form__text" />
+            <input type="text" name="tel" value="" class="contact-form__text" placeholder="000-0000-0000" />
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">お問い合わせ項目<span>必須</span></label>
@@ -226,20 +229,21 @@
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">キャンペーン</label>
-            <select name="" class="contact-form__contents">
-              <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
-              <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
-              <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
-            </select>
+            <div class="contact-form__contents">
+              <select name="" class="contact-form__select">
+                <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
+                <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
+                <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
+              </select>
+            </div>
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">お問い合わせ内容<span>必須</span></label>
-            <text name="content" rows="5" class="contact-form__textarea"></text>
+            <input type="textarea" name="content" rows="5" class="contact-form__textarea"></input>
           </div>
           <div class="contact-form__doui">
             <input type="checkbox" id="" name="" checked />
-            <label for="" class="">個人情報の取り扱いについて同意のうえ
-              送信します。</label>
+            <label for="" class="">個人情報の取り扱いについて同意のうえ<wbr />送信します。</label>
           </div>
           <div class="contact-form__btn-wrapper">
             <a href="./contact-form-success.html" class="btn">Send
