--- a/src/price.html
+++ b/src/price.html
@@ -179,7 +179,7 @@
     <div class="bread">
       <div class="bread__inner inner">
         <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow">></div>
+        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">料金一覧</div>
       </div>
     </div>
@@ -193,11 +193,11 @@
             </div>
             <dl class="price__lists">
               <div class="price__list">
-                <dt class="price__name">オープンウォーターダイバーコース</dt>
+                <dt class="price__name">オープンウォーター<wbr />ダイバーコース</dt>
                 <dd class="price__yen">¥50,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">アドバンスドオープンウォーターコース</dt>
+                <dt class="price__name">アドバンスド<wbr />オープンウォーターコース</dt>
                 <dd class="price__yen">¥60,000</dd>
               </div>
               <div class="price__list">
@@ -213,19 +213,19 @@
             </div>
             <dl class="price__lists">
               <div class="price__list">
-                <dt class="price__name">ビーチ体験ダイビング(半日)</dt>
+                <dt class="price__name">ビーチ体験ダイビング<wbr />(半日)</dt>
                 <dd class="price__yen">¥7,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">ビーチ体験ダイビング(1日)</dt>
+                <dt class="price__name">ビーチ体験ダイビング<wbr />(1日)</dt>
                 <dd class="price__yen">¥14,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">ボート体験ダイビング(半日)</dt>
+                <dt class="price__name">ボート体験ダイビング<wbr />(半日)</dt>
                 <dd class="price__yen">¥10,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">ボート体験ダイビング(1日)</dt>
+                <dt class="price__name">ボート体験ダイビング<wbr />(1日)</dt>
                 <dd class="price__yen">¥18,000</dd>
               </div>
             </dl>
@@ -237,19 +237,19 @@
             </div>
             <dl class="price__lists">
               <div class="price__list">
-                <dt class="price__name">ビーチダイビング(2ダイブ)</dt>
+                <dt class="price__name">ビーチダイビング<wbr />(2ダイブ)</dt>
                 <dd class="price__yen">¥14,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">ボートダイビング(2ダイブ)</dt>
+                <dt class="price__name">ボートダイビング<wbr />(2ダイブ)</dt>
                 <dd class="price__yen">¥18,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">スペシャルダイビング(2ダイブ)</dt>
+                <dt class="price__name">スペシャルダイビング<wbr />(2ダイブ)</dt>
                 <dd class="price__yen">¥24,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">ナイトダイビング(1ダイブ)</dt>
+                <dt class="price__name">ナイトダイビング<wbr />(1ダイブ)</dt>
                 <dd class="price__yen">¥10,000</dd>
               </div>
             </dl>
@@ -261,15 +261,15 @@
             </div>
             <dl class="price__lists">
               <div class="price__list">
-                <dt class="price__name">貸切ダイビング(2ダイブ)</dt>
+                <dt class="price__name">貸切ダイビング<wbr />(2ダイブ)</dt>
                 <dd class="price__yen">¥24,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">1日ダイビング(3ダイブ)</dt>
+                <dt class="price__name">1日ダイビング<wbr />(3ダイブ)</dt>
                 <dd class="price__yen">¥32,000</dd>
               </div>
               <div class="price__list">
-                <dt class="price__name">ナイトダイビング(2ダイブ)</dt>
+                <dt class="price__name">ナイトダイビング<wbr />(2ダイブ)</dt>
                 <dd class="price__yen">¥14,000</dd>
               </div>
             </dl>
