--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -197,7 +197,8 @@
         <form action="confirm.php" method="post" name="form" onsubmit="return validate()" class="contact-form__form">
           <div class="contact-form__item">
             <label class="contact-form__label">お名前<span>必須</span></label>
-            <input type="text" name="name" value="" class="contact-form__text" placeholder="沖縄　太郎" />
+            <input type="text" name="name" value="" class="contact-form__text contact-form__error"
+              placeholder="沖縄　太郎" />
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">メールアドレス<span>必須</span></label>
